changes until gui